--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,6 +20,18 @@
         app:layout_constraintVertical_bias="0.285" />
 
     <TextView
+        android:id="@+id/mPressure"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/Pressure"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.877" />
+
+    <TextView
         android:id="@+id/mDescription"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -30,7 +42,7 @@
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.904" />
+        app:layout_constraintVertical_bias="0.947" />
 
     <TextView
         android:id="@+id/mCity"
@@ -80,4 +92,5 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.642"
         app:srcCompat="@drawable/sunbehindcloud" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
